Add device selector.

--- a/static/index.html
+++ b/static/index.html
@@ -27,6 +27,10 @@
                 </svg>
             </button>
         </header>
+        <section style="margin-bottom:2rem;">
+            <label for="audio-device-select" style="font-weight:bold;">Audio Output Device:</label>
+            <select id="audio-device-select" style="margin-left:1em;"></select>
+        </section>
         <main>
             <div id="soundboard" class="soundboard"></div>
         </main>
